--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.17.2",
     "pg": "^8.11.3"
   }
 }
